# juno

./: .gitignore  README.md  package-lock.json  package.json
.github/prompts/: fastapi.instructions.md  main.instructions.md
.github/workflows/: update-reviews-list.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  data.py  projects.py  status.py  templates.py
backend/core/: config.py  models.py
backend/services/: data_service.py
docs/: CNAME  _coverpage.md  _sidebar.md  getting-started.md  index.html
docs/api/: endpoints.md  getting-started.md
docs/assets/: custom.css
docs/planning/: planning.md
docs/reviews/: DOCUMENTATION.md  README.md  generate-list.js  index.html  list.md  update-list.sh
docs/reviews/all/: 8_June_2025_backend-api-review.md  9_June_2025_frontend-criticism.md
frontend/: README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json
frontend/resources/: make_icns.sh
frontend/src/main/: index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.jsx  App.tsx
frontend/src/renderer/src/assets/: main.css
frontend/src/renderer/src/components/: DirectoryInput.jsx  Footer.jsx  Footer.tsx  FormSection.jsx  GenerateButton.jsx  Header.jsx  Header.tsx  Main.tsx  Navigation.jsx  PresetManager.jsx  ProjectForm.jsx  RadioGroup.jsx  SelectInput.jsx  Sidebar.tsx  TextInput.jsx
frontend/src/renderer/src/context/: BackendContext.tsx  BackendProvider.tsx
frontend/src/renderer/src/functions/: genPluginCode.tsx
frontend/src/renderer/src/hooks/: useBackend.ts
(+12 files in other folders)
